# pybibliometric_analysis

./: .githubworkflowsci.yml  .gitignore  README.md  cli.py  debug_import.py  extract_scopus.py  generate_report.py  io_utils.py  pyproject.toml  search_trend.yaml  test_clean_analyze.py
.github/workflows/: ci.yml
colab/: islamic_finance_colab.py
config/: inst_token.txt.example  scopus_api_key.txt.example  search.yaml  search_islamic_finance.yaml  search_trend.yaml
config/pybliometrics/: pybliometrics.cfg.example
pybibliometric_analysis/: __init__.py  __main__.py
src/pybibliometric_analysis/: __init__.py  analyze_bibliometrics.py  clean_scopus.py  cli.py  extract_scopus.py  io_utils.py  scopus_full_analysis.py  settings.py
tests/: conftest.py  test_clean_analyze.py  test_full_scopus_analysis.py  test_io_utils.py  test_phase1.py  test_pybliometrics_init_no_prompt.py
tests/fixtures/: raw_scopus_sample.csv
