[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybibliometric_analysis"
version = "0.1.0"
description = "Scopus extraction utilities for bibliometric analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Project contributors" }]

dependencies = [
  "pybliometrics>=3.5,<4",
  "pandas>=2.0,<3",
  "numpy>=1.24,<3",
  "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7,<9",
  "ruff>=0.6.8,<1",
]

parquet = [
  "pyarrow>=12,<16; python_version < '3.13'",
]

[project.scripts]
pybibliometric-analysis = "pybibliometric_analysis.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
